--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 	<div id="body">
-	<div id="base"></div>
+		<div id="base">
+			<div id="time-slot"></div>
+		</div>
 	</div>
 
 </body>
